--- a/PublicPrint/.classpath
+++ b/PublicPrint/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Development/Builds/default_31_03_2016/AppManager12/working/classes/json.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
